# brahma_cellular

./: README.md  pyproject.toml  rules_Readme.md
brahma_ca/: __init__.py  detector.py  engine.py  labeler.py  pipeline.py
brahma_ca/rules/: __init__.py  anomaly.py  base.py  edge.py  grouping.py  wolfram.py
brahma_cellular/: __init__.py  detector.py  engine.py  labeler.py  pipeline.py  state.py
brahma_cellular/rules/: __init__.py  anomaly.py  base.py  edge.py  grouping.py  wolfram.py
