[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brahma_cellular"
version = "0.1.0"
description = "Cellular automata rules for acoustic signal detection and signature labelling"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
identdynamics = [
    "identdynamics @ git+https://github.com/energy-master/identdynamics-sdk.git#subdirectory=python",
]
dev = [
    "pytest>=7",
    "hatchling",
]

[project.urls]
Repository = "https://github.com/energy-master/brahma_cellular"

[tool.setuptools.packages.find]
where = ["."]
include = ["brahma_cellular*"]
